# volumeicon

./: .clang-format  .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.ac  format-source.sh
data/: Makefile.am
data/gui/: preferences.ui
doc/: Makefile.am  volumeicon.1.pod  volumeicon.5.pod
po/: LINGUAS  POTFILES.in  bs.po  de.po  es.po  fr.po  hr.po  id.po  ka.po  lt.po  pl.po  pt_BR.po  ru.po  sr.po  tr.po  uk.po  volumeicon.pot
src/: Makefile.am  alsa_backend.c  alsa_backend.h  alsa_volume_mapping.c  alsa_volume_mapping.h  bind.c  config.c  config.h  keybinder.h  oss3_backend.c  oss4_backend.c  oss_backend.c  oss_backend.h  volumeicon.c
